A bug fixed and alignment issue

--- a/tictac.css
+++ b/tictac.css
@@ -16,7 +16,7 @@ td {
 
 .result-div {
     position: relative;
-    margin-top: 10px;
+    margin-top: 50px;
 }
 
 h3 {
